Added execution build page , summary page , Scenario Detail Page

--- a/src/footer/Footer.scss
+++ b/src/footer/Footer.scss
@@ -3,7 +3,7 @@
    // background-color: rgb(143, 145, 146);
    background-color:#ddd;
     color: #202124;
-    position: absolute;
+    position: sticky;
     width: 100%;
     bottom: 0;
     line-height: 50px;
